objects/Web_Contact_Form__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_ID_Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campaign ID Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <label>Campaign ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Web Contact Forms</relationshipLabel>
        <relationshipName>Web_Contact_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign__c</fullName>
        <label>GA Campaign</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Content__c</fullName>
        <label>GA Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Medium__c</fullName>
        <label>GA Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Source__c</fullName>
        <label>GA Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Term__c</fullName>
        <label>GA Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Program_Interest__c</fullName>
        <label>Program Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Program_Interest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMS_Opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt-in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Source_Page__c</fullName>
        <description>This field will contain the url of the web page the user was visiting when they chose
to fill out the lead form.</description>
        <inlineHelpText>This field will contain the url of the web page the user was visiting when they chose
to fill out the lead form.</inlineHelpText>
        <label>Web Source Page</label>
        <type>Url</type>
    </fields>
    <label>Web Contact Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WCF-{000000}</displayFormat>
        <label>Web Contact Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Contact Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>